# PlanCritic

./: .gitignore  CHANGELOG  Dockerfile  LICENSE  README.md  docker-compose.yml  experiment_config.json  libVAL.dylib  map_config.json  pyproject.toml  rephrased_goals.pkl  test_domain.pddl  test_instance.pddl
adherence model training/: create_training_data.py  embed_data_api.py  train_reward_model.py
adherence model training/temporal/restore_waterway_no_fuel/feedback/instance-1/: initial_state_summary.txt  instance-1.pddl  situation_info.txt  v3data.json
adherence model training/temporal/restore_waterway_no_fuel/feedback/instance-2/: initial_state_summary.txt  instance-2.pddl  situation_info.txt  v3data.json
adherence_model_training/: README.md  create_situation_info.py  create_training_data.py  embed_data_api.py  requirements.txt  train_reward_model.py  train_reward_model_dynamic.py
domains/restore_waterway_no_fuel/: README.md  domain_context.json  experiment_config.json
domains/restore_waterway_no_fuel/feedback/instance-1/: v4data.json  v4data_tmp.json  v5data.json
domains/restore_waterway_no_fuel/feedback/instance-3/: initial_state_summary.txt  instance-3.pddl
domains/restore_waterway_no_fuel/feedback/instance-4/: initial_state_summary.txt  instance-4.pddl  situation_info.txt  v3data.json  v4data.json  v5data.json
domains/satellite_simple_time/: domain.pddl  domain_context.json  experiment_config.json
domains/satellite_simple_time/feedback/instance-1/: situation_info.txt  v5data.json
domains/satellite_simple_time/feedback/instance-2/: situation_info.txt  v5data.json
domains/satellite_simple_time/feedback/instance-3/: situation_info.txt  v5data.json
domains/satellite_simple_time/feedback/instance-4/: situation_info.txt  v5data.json
plan_critic/: __init__.py  run.py
plan_critic/parsers/: __init__.py  optic_parser.py  parser.py
plan_critic/tools/: Validate  constraint_optimization.py  critic.py  evaluation.py  map_handling.py
(+3 files in other folders)
