[build-system]
requires = ["setuptools >= 61.0",
            "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plan_critic"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "cai-plan-critic"
dynamic = ["version"]
dependencies = [
    "tqdm",
    "langchain-openai==0.1.17",
    "langchain-core==0.2.21",
    "langgraph==0.1.8",
    "json_repair==0.25.3",
    "torch==2.3.1",
    "transformers==4.42.3",
    "CouchDB==1.2",
    "PyYAML==6.0.1",
    "openai==1.35.14",
    "instructor==1.3.7",
    "pydantic==2.8.2",
]
authors = [
  {name = "Owen Burns", email = "oburns@andrew.cmu.edu"},
]