[build-system]
requires = ["setuptools >= 61.0",
            "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plan_critic"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "cai-plan-critic"
dynamic = ["version"]
dependencies = [
    "tqdm",
    "langchain-openai",
    "langchain-core",
    "langgraph",
    "json_repair",
    "torch",
    "transformers",
    "CouchDB",
    "PyYAML",
    "openai",
    "instructor",
    "pydantic",
]
authors = [
  {name = "Owen Burns", email = "burnso@acm.org"},
]