[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["plan_critic"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "cai-plan-critic"
dynamic = ["version"]
dependencies = [
    "tqdm",
    "langchain-openai",
    "langchain-core",
    "langgraph",
    "json_repair",
    "torch",
    "transformers",
    "CouchDB",
    "PyYAML",
    "openai",
    "instructor",
    "pydantic",
    "backoff",
    "wandb",
    "scikit-learn"
]
authors = [
  {name = "Owen Burns", email = "burnso@acm.org"},
]